# what-the-path

./: Cargo.toml  LICENSE  README.md
src/: dirs.rs  error.rs  lib.rs  shell.rs
tests/: test.rs
